made changes to the index file, added reload function to csriptjs file, added timeout functions

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 <body>
     
     <h1>Let's Play A Fun Game <span class="emoji">&#x1F601;</span></h1>
-    <h3>Instructions:</h3>
-    <p>Type the number of rounds you want to play</p>
-    <p>Hit the playround button and then select one option</p>
-    Enter Number of Rounds
-    <input type="text" id="rounds" placeholder="5">
+    <h3>Instructions:</h3> 
+    <p>Hit the start button and then select one option</p>
+    <p>Double click on the start button to restart</p>
     <div id="playselect">
         <div class="btn">
             <img src="images/rock1.jpeg" alt="rock image">
@@ -30,7 +28,7 @@
         </div>
     </div>
     <div class="plyrnd">
-    <button id="playround">Playround</button>
+    <button id="playround">Start</button>
     </div>
     <div class="Pselect">
         <div class="pLeft">
